--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,22 @@ description = "dagster university"
 authors = ["Connor <flocka_birdz@pm.me>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 dagster = ">=1.4,<2.0"
+dagster-cloud = "^1.5.5"
+dagster-duckdb = "^0.21.5"
+geopandas = "^0.14.0"
+kaleido = "0.2.1"
+pandas = "^2.1.2"
+plotly = "^5.18.0"
+shapely = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+dagster-webserver = "^1.5.5"
 
 [build-system]
 requires = ["poetry-core>=1.6.0"]
